# tit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  config.example.toml  deny.toml
.github/workflows/: ci.yml
assets/: style.css
docs/: disaster-recovery.md  install.md  upgrade.md
docs/adr/: 0001-sqlite-storage.md  0002-ssh-identity.md  0003-read-side-git.md  0004-milestone-1-feasibility.md  0005-public-http-routes.md  0006-safe-markdown.md  0007-public-repository-feeds.md  0008-bounded-source-search.md  0009-operational-server.md  0010-account-lifecycle.md  0011-web-login-sessions.md  0012-repository-authorization.md  0013-authenticated-git.md  0014-audit-history.md  0015-ssh-repository-commands.md  0016-repository-event-service.md  0017-issue-workflow.md  0018-repository-watches.md  0019-scoped-feeds.md  0020-bounded-metadata-search.md  0021-ssh-issue-commands.md  0022-pull-request-refs.md  0023-pull-request-comparison.md  0024-pull-request-review.md  0025-pull-request-merge.md  0026-branch-rules.md  0027-ssh-pull-request-checkout.md  0028-process-lifecycle.md  0029-backup-and-restore.md  0030-read-only-diagnostics.md  0031-limits-and-abuse-resistance.md  0032-observability.md  0033-release-packaging.md
release/completions/: _tit  tit.bash  tit.fish
release/examples/: Caddyfile  com.tit-cde.tit.plist  tit.freebsd  tit.netbsd  tit.openbsd  tit.service
release/man/: tit.1
scripts/: check  check-m1a  check-m1b  check-m1c  check-m1d  check-m2-1  check-m2-2  check-m2-3  check-m2-4  check-m2-5  check-m2-6  check-m2-7  check-m2-8  check-m3  check-m3-1  check-m3-2  check-m3-3  check-m3-4  check-m3-5  check-m3-6  check-m4-1  check-m4-2  check-m4-5  check-m4-6  check-m5  check-m5-1  check-m5-2  check-m5-5  check-m5-6  check-m6-1  check-m6-2  check-m6-3  check-m6-4  check-m6-5  check-m6-6  package-release  verify-release-artifact
src/: account.rs  admin.rs  auth.rs  backup.rs  bootstrap.rs  cli.rs  config.rs  control.rs  diagnostics.rs  feed.rs  feed_token.rs  instance.rs  issue.rs  main.rs  maintenance.rs  markdown.rs  policy.rs  pull_request.rs  rate_limit.rs  repair.rs  repository.rs  search.rs  serve.rs  session.rs  ssh.rs  telemetry.rs  watch.rs
src/domain/: repository.rs
src/git/: http.rs  mod.rs  packetline.rs  patch.rs  read.rs  receive_pack.rs  repository.rs  transport.rs  upload_pack.rs
src/http/: feeds.rs  issues.rs  metadata_search.rs  mod.rs  public.rs  pull_requests.rs  repository_settings.rs  watches.rs
src/store/: event.rs  mod.rs
src/store/migrations/: 001_initial.sql  002_state.sql  003_git_intents.sql  004_identity.sql  005_repository.sql  006_repository_events.sql  007_account_lifecycle.sql  008_web_sessions.sql  009_repository_authorization.sql  010_audit_history.sql  011_domain_events.sql  012_issues.sql  013_watches.sql  014_feed_tokens.sql  015_pull_requests.sql  016_pull_request_reviews.sql  017_pull_request_merges.sql  018_streamlined_login.sql  019_product_reduction.sql  020_repository_profiles.sql  021_pull_request_lifecycle.sql  022_account_key_management.sql  023_default_branch.sql
templates/: account-key-auth.html  account-page.html  account.html  activity.html  base.html  error.html  feed-token-issued.html  feed-tokens.html  home.html  issue.html  issues.html  login-challenge.html  login-ssh.html  login.html  logout.html  metadata-search.html  profile.html  pull_request.html  pull_requests.html  recovery-code.html  repository-nav.html  repository-settings.html  repository.html  watch.html
tests/: account_lifecycle.rs  auth.rs  cli.rs  git_http.rs  git_push_ssh.rs  git_reads.rs  git_repository.rs  git_ssh.rs  metadata_search.rs  public_routes.rs  pull_requests.rs  repository_policy.rs  serve.rs  sqlite.rs  sqlite_workload.rs  ssh.rs  web_session.rs  web_shell.rs
tests/fixtures/sqlite/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql
tests/snapshots/web/: bad-request.html  home.html  method-not-allowed.html  not-found.html
tests/support/: mod.rs
